--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- card part -->
-    <div class="copy bg-[#f5fff6] h-max px-2 sm:px-6 py-4 grid grid-cols-1 lg:grid-cols-4 gap-4">
+    <div class="bg-[#f5fff6] h-max px-2 sm:px-6 py-4 grid grid-cols-1 lg:grid-cols-4 gap-4">
         <div class="parent bg-white p-3 shadow-sm h-max lg:h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
@@ -69,11 +69,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <h1 class="call-name text-2xl font-bold">National Emergency Number</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">999</h2>
+                <h2 class="call-number text-3xl font-bold">999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">All</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
@@ -93,11 +93,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Police Helpline Number</h1>
+                <h1 class="call-name text-2xl font-bold">Police Helpline Number</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Police</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">999</h2>
+                <h2 class="call-number text-3xl font-bold">999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Police</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
@@ -117,11 +117,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Fire Service Number</h1>
+                <h1 class="call-name text-2xl font-bold">Fire Service Number</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Fire Service</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">999</h2>
+                <h2 class="call-number text-3xl font-bold">999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Fire</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
@@ -141,11 +141,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Ambulance Service</h1>
+                <h1 class="call-name text-2xl font-bold">Ambulance Service</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Ambulance</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">1994-999999</h2>
+                <h2 class="call-number text-3xl font-bold">1994-999999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Health</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
@@ -165,11 +165,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Women & Child Helpline</h1>
+                <h1 class="call-name text-2xl font-bold">Women & Child Helpline</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Women & Child Helpline</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">109</h2>
+                <h2 class="call-number text-3xl font-bold">109</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Help</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
@@ -189,11 +189,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Anti-Corruption Helpline</h1>
+                <h1 class="call-name text-2xl font-bold">Anti-Corruption Helpline</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Anti-Corruption</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">106</h2>
+                <h2 class="call-number text-3xl font-bold">106</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Govt</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
@@ -213,11 +213,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Electricity Helpline</h1>
+                <h1 class="call-name text-2xl font-bold">Electricity Helpline</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Electricity Outage</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">16216</h2>
+                <h2 class="call-number text-3xl font-bold">16216</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Electricity
                 </p>
             </div>
@@ -238,11 +238,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Brac Helpline</h1>
+                <h1 class="call-name text-2xl font-bold">Brac Helpline</h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Brac</p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">16445</h2>
+                <h2 class="call-number text-3xl font-bold">16445</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">NGO</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
@@ -262,11 +262,11 @@
                 <i class="favourite fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">Bangladesh Railway Helpline </h1>
+                <h1 class="call-name text-2xl font-bold">Bangladesh Railway Helpline </h1>
                 <p class="text-lg text-[#5c5c5c] font-normal">Bangladesh Railway Helpline </p>
             </div>
             <div class="py-4">
-                <h2 class="number text-3xl font-bold">163</h2>
+                <h2 class="call-number text-3xl font-bold">163</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Travel</p>
             </div>
             <div class="flex gap-2 sm:gap-5 ">
