--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                 <h2 class="call-number text-3xl font-bold">999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">All</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5 ">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -100,12 +100,12 @@
                 <h2 class="call-number text-3xl font-bold">999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Police</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5 ">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -124,12 +124,12 @@
                 <h2 class="call-number text-3xl font-bold">999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Fire</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -148,12 +148,12 @@
                 <h2 class="call-number text-3xl font-bold">1994-999999</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Health</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -172,12 +172,12 @@
                 <h2 class="call-number text-3xl font-bold">109</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Help</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -196,12 +196,12 @@
                 <h2 class="call-number text-3xl font-bold">106</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Govt</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -221,12 +221,12 @@
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Electricity
                 </p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -245,12 +245,12 @@
                 <h2 class="call-number text-3xl font-bold">16445</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">NGO</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
@@ -269,12 +269,12 @@
                 <h2 class="call-number text-3xl font-bold">163</h2>
                 <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Travel</p>
             </div>
-            <div class="flex gap-2 sm:gap-5 ">
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-5">
                 <button
-                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-[160px] sm:w-[190px] h-[40px] rounded-lg"><i
+                    class="copy-button btn btn-outline border-gray-400 text-[#5c5c5c] w-full sm:w-[190px] h-[40px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
-                    class="call-button btn btn-neutral bg-[#00a63e]  w-[160px] sm:w-[190px] h-[40px] rounded-lg border-none"><i
+                    class="call-button btn btn-neutral bg-[#00a63e]  w-full sm:w-[190px] h-[40px] rounded-lg border-none"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
